[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2018"
license = "Apache-2.0"
name = "starcoin-indexer"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1"
async-trait = "~0.1"
clap = "3.0.0-beta.2"
elasticsearch = "7.10.0-alpha.1"
serde = "~1"
serde_json = "~1"
starcoin-rpc-client = { git = "https://github.com/starcoinorg/starcoin", tag="v0.9.0" }